[package]
name = "convos"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = true }
clap = { version = "4.5", features = ["derive"] }
nu-ansi-term = "0.49"
once_cell = "1.19"
pulldown-cmark = { version = "0.9", default-features = false, features = ["simd"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = { version = "5", features = ["regex-onig"] }
